--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "mocha -r ts-node/register test/**/*.spec.ts",
     "build": "tsc -p tsconfig.json",
-    "prepare": "npm run build"
+    "prepare": "npm run build",
+    "format": "prettier --write --loglevel warn **/*.ts"
   },
   "husky": {
     "hooks": {
@@ -19,17 +20,17 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.149",
-    "@types/node": "^13.9.0",
-    "typescript": "^3.8.3",
-    "mocha": "^7.1.2",
     "@types/mocha": "^7.0.2",
-    "ts-node": "^8.9.1",
+    "@types/node": "^13.9.0",
     "@typescript-eslint/eslint-plugin": "^2.22.0",
     "@typescript-eslint/parser": "^2.22.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
+    "husky": "^4.2.5",
+    "mocha": "^7.1.2",
     "prettier": "^2.0.2",
     "pretty-quick": "^2.0.1",
-    "husky": "^4.2.5"
+    "ts-node": "^8.9.1",
+    "typescript": "^3.8.3"
   }
 }
