--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "0.0.1",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "test": "mocha -r ts-node/register test/**/*.spec.ts",
-    "build": "tsc -p tsconfig.json",
+    "build": "rimraf dist && tsc -p tsconfig.json",
+    "build-test": "rimraf dist && tsc -p tsconfig.test.json",
     "prepare": "npm run build",
     "format": "prettier --write --loglevel warn **/*.ts"
   },
@@ -31,6 +35,7 @@
     "prettier": "^2.0.2",
     "pretty-quick": "^2.0.1",
     "ts-node": "^8.9.1",
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+    "rimraf": "^3.0.2"
   }
 }
