--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,20 @@
 {
   "compilerOptions": {
-    "lib": ["ES2019"],
-    "esModuleInterop": false,
     "module": "commonjs",
-    "moduleResolution": "node",
-    "allowSyntheticDefaultImports": true,
-    "emitDecoratorMetadata": true,
+    "target": "ES2019",
+    "lib": ["ES2020"],
     "experimentalDecorators": true,
-    "target": "ES2017",
-    "sourceMap": true,
+    "emitDecoratorMetadata": true,
     "declaration": true,
-    "baseUrl": "src",
-    "outDir": "dist",
-    "noUnusedLocals": true,
+    "sourceMap": true,
+    "alwaysStrict": true,
     "noImplicitAny": true,
     "noImplicitThis": true,
-    "alwaysStrict": true,
-    "strictBindCallApply": true,
-    "strictFunctionTypes": true
-  }
+    "allowSyntheticDefaultImports": true,
+    "moduleResolution": "node",
+    "baseUrl": "src",
+    "outDir": "dist"
+  },
+  "exclude": ["node_modules"],
+  "include": ["src"]
 }
