--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ts-command",
-  "version": "0.0.1",
+  "version": "0.1.1",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
@@ -19,8 +19,8 @@
     }
   },
   "dependencies": {
-    "reflect-metadata": "^0.1.13",
-    "lodash": "^4.17.15"
+    "lodash": "^4.17.15",
+    "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.149",
@@ -34,8 +34,8 @@
     "mocha": "^7.1.2",
     "prettier": "^2.0.2",
     "pretty-quick": "^2.0.1",
+    "rimraf": "^3.0.2",
     "ts-node": "^8.9.1",
-    "typescript": "^3.8.3",
-    "rimraf": "^3.0.2"
+    "typescript": "^3.8.3"
   }
 }
